# jenkins_ci_cd

./: .gitlab-ci.yml  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
ansible/: Makefile  hosts.txt  playbook.yml
ansible/group_vars/: stage_servers_web
ansible/playbook_vars/: docker_vars_example.yml  retry_task_vars_example.yml
ansible/playbooks/: build_and_push_docker_image.yml  pull_and_up_docker_compose.yml
ansible/playbooks/tasks/: docker_prune.yml  login_to_docker.yml
app/: main.py
app/api/v1/routers/: api_router.py  wallets.py
app/api/v1/validations/: wallets.py
app/core/: config.py  dao.py
app/core/database/: db_helper.py
app/core/database/models/: __init__.py  wallets.py
app/migrations/: env.py
app/migrations/versions/: 24_12_2024_19:09-create_wallet.py
app/wallets/: dao.py  schemas.py
docker/: docker-compose.yml  gitlab.yml
tests/: conftest.py  constants.py  test_endpoints.py
